Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for pre-release sg3_utils-1.48 [20220207] [svn: r936]
  - sg_z_act_query: new utility for sending either a
    Zone activate or Zone query command
  - sg_rep_density: new utility for decoding the response of
    Report density support command [ssc (tape)]
  - rescan-scsi-bus.sh: with '-r' it crashed due to change in
    rev 867 in sg_inq.c from Device_type= to PDT= .
    Change script to use either
    - undo regression in rev 815 that added newline after
      each LUN in the default (no option) output
  - sg_rep_zones: add Report zone starting LBA granularity
    field in REPORT ZONES response [zbc2r12]
    - add --brief option, show part of header and last
      descriptor fetched
    - add --find ZT option to find the first occurrence of
      ZT; if ZT prefixed by - or ! find first not equal to ZT
  - sg_decode_sense: add --nodecode option
  - sg_logs: tweak the meaning of --list option to more closely
    reflect the contents of log pages 0x0 and 0x0,0xff
    - make '-lll' set union of log pages 0x0 and 0x0,0xff
    - for short binary fields, remove address (index) from
      the left hand side of each line of hex
  - sg_modes: improve handling of zbc disks with pdt=0x14
  - sg_opcodes: cleanup error reporting
  - sg_lib: add sg_pdt_s_eq() to cope with ZBC disks which may
    be either PDT_ZBC (if host managed) or PDT_DISK 
    - cleanup masks for PDT [0x1f] and group_number [0x3f]
  - initialize all sense buffers to 0
  - rework main README file
  - rev 921+922 are bugfix revs on release 1.47 [r919,920]
  - configure.ac: map msys to mingw
    - repeat tweak to accept uclinux as linux
  - sg_dd: change uint type to uint32_t
  - sg_pt_dummy.c: remove problematic include
  - round of coverity identified issue fixes (and non-issues)
