@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for pre-release sg3_utils-1.48 [20220207] [svn: r936]
+Changelog for pre-release sg3_utils-1.48 [20220211] [svn: r937]
   - sg_z_act_query: new utility for sending either a
     Zone activate or Zone query command
   - sg_rep_density: new utility for decoding the response of
@@ -26,6 +26,7 @@ Changelog for pre-release sg3_utils-1.48 [20220207] [svn: r936]
       the left hand side of each line of hex
   - sg_modes: improve handling of zbc disks with pdt=0x14
   - sg_opcodes: cleanup error reporting
+  - sg_format: allow disk formats on ZBC (zoned) disks
   - sg_lib: add sg_pdt_s_eq() to cope with ZBC disks which may
     be either PDT_ZBC (if host managed) or PDT_DISK 
     - cleanup masks for PDT [0x1f] and group_number [0x3f]
